--- a/_config.yml
+++ b/_config.yml
@@ -285,8 +285,8 @@ valine:
   enable: true
   autoloader: /public/js/valine.js
   src: //cdn.jsdelivr.net/npm/valine
-  appId: #9hABRddSuEkTgqLrt1VSK5B1-gzGzoHsz
-  appKey: #NJ7RwmgrxsF7KDzlqU7YewlL
+  appId: vbD9TVbmuWrWdTrKc2PYLXW6-gzGzoHsz
+  appKey: Shf5VJKDk3QOBk8xIRYI9x8E
   notify: true # 评论回复邮件提醒
   verify: true # 验证码服务
   avatar: identicon
